--- a/views/shared/action_item.tmpl
+++ b/views/shared/action_item.tmpl
@@ -3,12 +3,15 @@
 {{$context := .Context}}
 {{$resource := .Resource}}
 {{$bulkEdit := .BulkEdit}}
-
 {{define "url" -}}
   {{ if .Action.URL }}
     {{- call .Action.URL .Result .Context -}}
   {{else if (and (not .Multiple) (not .BulkEdit))}}
-    {{- join_url (url_for .Result .Resource) .Action.ToParam -}}
+    {{if .Resource.Config.Singleton }}
+      {{- join_url (url_for .Result .Resource) "0" .Action.ToParam -}}
+    {{else}}
+      {{- join_url (url_for .Result .Resource) .Action.ToParam -}}
+    {{end}}
   {{else}}
     {{- join_url (url_for .Resource) "!action" .Action.ToParam -}}
   {{ end }}
@@ -28,12 +31,14 @@
   <a class="{{if ne (print .Mode) "menu_item"}}mdl-button mdl-button--colored mdl-button--raised {{end -}} qor-action-button" type="button"
     data-url="{{template "url" .}}"
     data-error-no-item="{{t "qor_admin.actions.please_select_an_item" "Please select at least one item"}}"
+    data-singleton="{{$resource.Config.Singleton}}"
     {{if $action.URLOpenType}}
       data-open-type="{{$action.URLOpenType}}"
     {{end}}
     {{if not $action.Resource}}
       data-dataType="json"
       data-ajax-form="true"
+
       data-from-index="{{$bulkEdit}}"
       data-confirm="{{t "qor_admin.form.are_you_sure" "Are you sure?"}}"
       data-confirm-ok="{{t "qor_admin.form.confirm.button.ok" "ok"}}" data-confirm-cancel="{{t "qor_admin.form.confirm.button.cancel" "cancel"}}"
@@ -42,3 +47,4 @@
     {{t (printf "%v.actions.%v" $resource.ToParam $action.Label) $action.Label}}
   </a>
 {{end}}
+
